<resources>
    <string name="app_name">Time Banking</string>

    <string name="name">Full Name</string>
    <string name="location">Your Location</string>
    <string name="username">Your Username</string>
    <string name="email">Your Email</string>
    <string name="credit">Your Credit</string>
    <string name="skills">Skill1 | Skill2 | Skill3</string>
    <string name="description">Your Description</string>
    <string name="labelFullname">Full Name</string>
    <string name="labelLocation">Location</string>
    <string name="labelUsername">Username</string>
    <string name="labelRating">Rating</string>
    <string name="labelEmail">Email</string>
    <string name="labelCredit">Credit</string>
    <string name="labelSkill">Skill</string>
    <string name="labelSkills">Skills</string>

    <string name="labelDescription">Description</string>
    <string name="labelDate">Date</string>
    <string name="labelTime">Time</string>
    <string name="labelDuration">Duration</string>
    <string name="propic">Your Profile Picture</string>
    <string name="preference_profile_info_file">preferences</string>
    <string name="modify">Modify your profile</string>

    <string name="camera">Use camera to take picture</string>
    <string name="gallery">Select an image from the phone gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="emptylist">Empty List</string>
    <string name="empty_add">Add new timeslot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Name</string>
    <string name="nav_header_subtitle">Your Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="no_data_available">No Timeslots available, please add new one</string>
    <string name="add_new_timeslots">Add new timeslots</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="timeslots">Your Offers</string>
    <string name="service_name">Service name</string>
    <string name="no_offers_available">Currently there are no offers for this particular skill. Please check again later.</string>
    <string name="search_bar">search_bar</string>
    <string name="button1">Button</string>
    <string name="button">Button</string>
    <string name="clientId">695828131634-j3gs3lioa1g888jtp97sg0o3f66b54kc.apps.googleusercontent.com</string>
    <string name="click_on_creator_to_show_details">"""Click on creator's name to show details"""</string>
    <string name="commentLabel">The user commented:</string>
    <string name="logout">Logout</string>
    <string name="comment">Comment</string>
    <string name="duration">Duration</string>
    <string name="offer_location">Location</string>
    <string name="creator">Creator</string>
    <string name="skill_cooking">Skill: Cooking</string>
    <string name="title">Title</string>
    <string name="offer_description">Description</string>
    <string name="skill">Skill</string>
    <string name="rating">user_rating</string>
    <string name="rateMessage">Rate the user</string>
    <string name="rateSubmitButton">Submit</string>
    <string name="TextViewQl">Valor</string>
    <string name="chat_with_user">Chat with User</string>
    <string name="accept_request">Accept request</string>
    <string name="reject_request">Reject request</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="no_bookmarks">You don\'t have any offer with a bookmark.</string>
    <string name="add_bookmark">Add to bookmarks</string>
    <string name="rem_bookmark">Remove from bookmarks</string>
    <string name="user_offers">Your requests</string>
    <string name="tabs_desc">Tabs for offer types.</string>
    <string name="pager_desc">Variable page content.</string>
    <string name="no_accepted">You haven\'t accepted any offers yet.</string>
    <string name="no_assigned">You haven\'t requested any services yet.</string>
    <string name="rateUserButton">Rate User</string>
    <string name="completeOffer">Mark as completed</string>
    <string name="completedOffers">Completed Offers</string>
    <string name="no_completed">You haven\'t completed any offers yet</string>
    <string name="rateComment">Leave a comment (optional)</string>
    <string name="your_chats">Your chats</string>


</resources>