<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/serviceFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"
            />
        <item
            android:id="@+id/showProfileFragment"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/profile"
            />
        <item
            android:id="@+id/itemFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/timeslots" />
        <item
            android:id="@+id/fragment_saved_offers"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/fragment_user_offers"
            android:icon="@drawable/ic_baseline_check_24"
            android:title="@string/user_offers" />
        <item
            android:id="@+id/conversationFragment2"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/your_chats" />
    </group>
</menu>