<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintDimensionRatio="v,2:3"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/propic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="1"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepic" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelUsername"
                android:textColor="#A6A6A6"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/nickname"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="501dp" />

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelEmail"
                android:textColor="#A6A6A6"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/email"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="26sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="341dp" />

            <TextView
                android:id="@+id/labelLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelLocation"
                android:textColor="#A6A6A6"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="451dp" />

            <TextView
                android:id="@+id/labelSkills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelSkills"
                android:textColor="#A6A6A6"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/skills"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/skills"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="501dp" />

            <TextView
                android:id="@+id/labelDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelDescription"
                android:textColor="#A6A6A6"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="501dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>